--- a/sass/global/modules/_navigation.scss
+++ b/sass/global/modules/_navigation.scss
@@ -111,6 +111,73 @@
         }
     }
     
+    .contactarea {
+        width: 100%;
+        padding: 8px 25px;
+        @include box-sizing (border-box);
+        @include bpm(767px) {
+        display: none;
+    }
+        .separator {
+            width: 55px;
+            height: 3px;
+            margin: 10px 0;
+             background-color: #818181;
+        }
+        
+        h5 {
+            color: #818181;
+            font-size: 11px;
+            font-family : 'Roboto', "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+            margin-bottom: 21px;
+            margin-top: 23px;
+        }
+        
+        a {
+            font-family : 'Roboto', "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+            text-decoration: none;
+            color: #818181;
+            display: block;
+            padding: 10px;
+            position: relative;
+            padding: 0px 10px 0px 29px;
+            margin-bottom: 15px;
+            font-weight: 700;
+             
+            
+            &:before {
+                font-family: 'biz-icons';
+                speak: none;
+                font-style: normal;
+                font-weight: normal;
+                font-variant: normal;
+                text-transform: none;
+                line-height: 1;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+                font-size: 17px;
+                position: absolute;
+                left: 3px;
+                top:  3px;
+            }
+            
+            &.mail:hover,
+            &.mail:focus {
+                color: $white;
+            }
+            
+            
+            &.call:before {
+                content: "\f095";
+                font-size: 18px;
+            }
+            
+            &.mail:before {
+                content: "\f1d8";
+            }
+        }
+    }
+    
     
     
 }
