--- a/sass/global/modules/_benefits.scss
+++ b/sass/global/modules/_benefits.scss
@@ -1,10 +1,10 @@
 .benefits-wrapper {
-    padding-top: 40px;
+    padding-top: 30px;
     position: relative;
     @include bpm(767px) {
-                    padding-top: 0px;
-                }
-    
+        padding-top: 0px;
+    }
+
     .benefits-visual {
         position: absolute;
         z-index: 0;
@@ -40,15 +40,15 @@
     .benefits-items {
         margin-top : 5.29%;
         @include bpm(767px) {
-                   margin-top: 0;
-                }
+            margin-top: 0;
+        }
         position: relative;
         z-index: 10;
         
         .item-wrapper {
             @include box-sizing (border-box);
-            padding-top: 20px;
-            padding-left:40px;
+            padding-top: 60px;
+            padding-left:34px;
             padding-bottom: 40px;
             background: #ffffff;
             @include bp(900px) {
@@ -66,6 +66,21 @@
                  padding-top: 0px;
                  padding-bottom: 0px;
                  min-height: 1px;
+            }
+            
+            .benefits-intro {
+                position: absolute;
+                top: 24px;
+                @include bpm(767px) {
+                   display: none;
+                }
+                
+                p {
+                    font-weight: 700;
+                    text-transform: uppercase;
+                    font-size: 10px;
+                    color: #949494;
+                }
             }
             
             &:before {
@@ -105,13 +120,21 @@
             
             &:before {
                 font-family: 'biz-icons';
-                font-size: 30px;
+                speak: none;
+                font-style: normal;
+                font-weight: normal;
+                font-variant: normal;
+                text-transform: none;
+                line-height: 1;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+                font-size: 26px;
                 color: #95BC0D;
                 position: absolute;
-                left: -8px;
-                @include bpm(767px) {
                 left: 0px;
-            }
+                @include bpm(767px) {
+                    left: 0px;
+                }
                 top: 3px;
             }
             
@@ -167,6 +190,18 @@
                 content: "\e608";
             }
             
+            &.better:before {
+                content: "\f00c";
+            }
+            
+            &.strong:before {
+                content: "\e611";
+            }
+            
+            &.pickup:before {
+                content: "\e612";
+            }
+            
             h3 {
                 font-family: "Roboto";
                 text-align: left;
@@ -178,7 +213,7 @@
             
             p {
                 text-align: left;
-                margin-bottom: 40px;
+                margin-bottom: 35px;
                 margin-top: 0;
             }
         }
@@ -194,6 +229,10 @@
         .benefits-items {
             
             .item-wrapper {
+                
+                .benefits-intro {
+                    left: 34px;
+                }
                 
                 &:before {
                     @include box-shadow(rgba($black, 0.1) -4px 5px 4px 0px );
@@ -227,10 +266,16 @@
             
             .item-wrapper {
                 padding-left: 0;
-                padding-right: 40px;
+                padding-right: 34px;
+                text-align: right;
                 @include bpm(767px) {
                    padding-right: 0px;
                 }
+                
+                .benefits-intro {
+                    right: 32px;
+                }
+                
                 &:before {
                     @include box-shadow(rgba($black, 0.1) 4px 5px 4px 0px );
                     left: auto;
@@ -248,7 +293,7 @@
                     padding-right: 50px;
                     
                     &:before  {
-                        right: -8px;
+                        right: 0px;
                         @include bpm(767px) {
                         right: 0px;
                     }
