--- a/sass/global/modules/_parallax.scss
+++ b/sass/global/modules/_parallax.scss
@@ -1,13 +1,10 @@
 
 .image-holder {
-    height: 440px;
-    @include bp(900px) {
-        height: 270px;
-    }
+    height: 260px;
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment:fixed;
+    
     .mobile & {
         background-attachment: inherit;
     }
@@ -33,86 +30,22 @@
     }
 }
 
+#parallax0 {
+    
+    background-image: url('../images/parallax/0.jpg');
+    
+    
+}
+
 #parallax1 {
+    
     background-image: url('../images/parallax/1.jpg');
     
-     .parallax-content {
-        @include bp(1282px) {
-            padding-top: 0px;
-        }
-     }
     
-    .partnerOuter {
-        text-align: center;
-    }
-    
-    div.partner-wrapper {
-          display: inline-block;
-        
-        a {
-            display: block;
-            width: 190px;
-            height: 109px;
-            @include bp(1030px) {
-                width: auto;
-                height: auto;
-            }
-            @include bp(900px) {
-                line-height: 78px;
-            }
-            line-height: 109px;
-            text-align: center;
-            background-color: #FFF;
-            opacity: 0.7;
-            margin-right: 10px;
-            margin-bottom: 10px;
-            @include bp(1030px) {
-                opacity: 1;
-                 background: none;;
-            }
-                
-            img {
-                vertical-align: middle;
-            }
-        }
-    }
 }
 
 #parallax2 {
     background-image: url('../images/parallax/2.jpg');
-    
-    .quote-wrapper {
-        
-        .quote {
-            font-family: 'Dosis';
-            color: $white;
-            font-size: 46px;
-            @include bp(900px) {
-                font-size: 23px;
-            }
-            font-weight: 700;
-            
-            
-            .author {
-                display: block;
-                font-size:20px;
-                @include bp(900px) {
-                    font-size: 14px;
-                }
-                text-transform: uppercase;
-            }
-            
-            &.right-align {
-                text-align: right;
-            }
-            
-            &.left-align {
-                text-align: left;
-            }
-            
-        }
-       
-    }
     
 }
 
@@ -123,5 +56,15 @@
 
 #parallax4 {
     background-image: url('../images/parallax/4.jpg');
+    
+}
+
+#parallax5 {
+    background-image: url('../images/parallax/5.jpg');
+    
+}
+
+#parallax6 {
+    background-image: url('../images/parallax/6.jpg');
     
 }
