--- a/sass/regions/_aboutus.scss
+++ b/sass/regions/_aboutus.scss
@@ -5,84 +5,62 @@
         @include bpm(767px) {
                 padding: 0px;
             }
-        
-        .aboutus-buttons {
-            width: 35px;
-	    height: 35px;
-            display: block;
-            margin: 0 26px;
-            border: 2px solid #B3B3B3;
-            @include border-radius(50px);
-            position: relative;
             
-            &:after {
-                font-family: 'biz-icons';
-                font-size: 24px;
-                color: #B3B3B3;
-                position: absolute;
-                left: 50%;
-                top: 50%;
-                margin-left: -12px;
-                margin-top: -12px;
+            .row  { 
+            margin-bottom: 40px;
+            @include bpm(540px) {
+            margin-bottom: 0px;
             }
             
-            &.prev:after {
-                content: "\e60a";
+            &.last {
+                margin-bottom: 0;
+            }
             }
             
-            &.next:after {
-                content: "\e60b";
-                margin-left: -11px;
+        .item {
+            @include box-sizing (border-box);
+            width: 50%;
+            @include bpm(540px) {
+            width: 100%;
+            padding: 0 0px;
+            margin-bottom: 40px;
             }
+            float: left;
+            padding: 0 35px;
             
-        }
-        
-        .aboutus-slider {
-            overflow: hidden;
-	    padding: 20px 0 0;
-            
-            li,
-            img {
-                display: inline-block;
-            }
-            
-            ul li {
-                text-align: center;
-                float: left;
-                padding: 0 0 0 0;
-                width: 215px;
-            }
-            
-            .about-text {
-                text-align: center;
+            .image {
+                width: 43%;
+                margin: 0 auto;
                 
-                h2 {
-                    font-size: 21px;
-                    line-height: 1.2em;
-                    margin: 0;
-                    padding: 16px 0 6px;
-                    font-weight: 700;
-                    color: $heading-black;
-                }
-                
-                h3 {
-                    font-size: 14px;
-                    font-weight: normal;
-                    margin: 0 0 22px;
-                    color: #8D8D8D;
-                }
-                
-                p {
-                    margin: 0 0 26px;
-                }
-                
-                .quote {
+                img {
+                    max-width: 100%;
+                    @include border-radius(50%);
                     
-                }
+                    }
+            }
+            p {
+                text-align: left;
             }
             
+            .quote {
+                text-align: center;
+                position: relative;
+                font-style: italic;
+                
+            }
+            
+            h2 {
+                color: #555;
+                font-size: 18px;
+                margin: 15px 0 10px 0;
+            }
+            
+            h3 {
+                color: #666;
+                font-size: 14px;
+                margin-top: 0;
+            }
         }
-        
         
     }
     
