--- a/sass/regions/_kontakt.scss
+++ b/sass/regions/_kontakt.scss
@@ -70,6 +70,14 @@
             .error:before,
             .okay:before {
                 font-family: 'biz-icons';
+                speak: none;
+                font-style: normal;
+                font-weight: normal;
+                font-variant: normal;
+                text-transform: none;
+                line-height: 1;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
                 font-size: 24px;
             }
                 
@@ -89,15 +97,6 @@
                 
             textarea {
                 min-height: 146px; 
-            }
-            
-            input.button {
-                @include sassy-button("simple", 4px, 13px, $green-button-gradient-start, $green-button-gradient-end, $button-white, "none");
-                margin-top: 20px;
-                font-weight: 700;
-                font-size: 16px;
-                @include text-shadow($green-button-text-shadow 1px 1px 0);
-                outline: none;
             }
         }
     }
@@ -163,6 +162,14 @@
             
             &:before {
                 font-family: 'biz-icons';
+                speak: none;
+                font-style: normal;
+                font-weight: normal;
+                font-variant: normal;
+                text-transform: none;
+                line-height: 1;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
                 color: #A3A3A3;
                 font-size: 19px;
                 position: absolute;
@@ -175,7 +182,7 @@
             }
             
             &.mail:before {
-                content: "\f003";
+                content: "\f1d8";
                 font-size: 16px;
             }
             
@@ -228,6 +235,14 @@
                     
                     &:before {
                         font-family: "biz-icons";
+                        speak: none;
+                        font-style: normal;
+                        font-weight: normal;
+                        font-variant: normal;
+                        text-transform: none;
+                        line-height: 1;
+                        -webkit-font-smoothing: antialiased;
+                        -moz-osx-font-smoothing: grayscale;
                         position: absolute;
                         font-size: 16px;
                         color: #A3A3A3;
