--- a/sass/global/elements/_elements.scss
+++ b/sass/global/elements/_elements.scss
@@ -25,6 +25,7 @@ a {
     text-decoration: none;
     transition: color 0.3s ease;
     @include transition(color .3s ease);
+    
 }
 
 .section {
@@ -105,6 +106,32 @@ h5 {
 .circle {
     border-radius: 50%;
 }
+
+ .animated { 
+            -webkit-animation-duration: 2.5s; 
+            animation-duration: 2.5s; 
+            -webkit-animation-fill-mode: both; 
+            animation-fill-mode: both; 
+            animation-iteration-count:infinite; 
+            -webkit-animation-iteration-count:infinite; 
+        } 
+        
+        @-webkit-keyframes bounce { 
+            0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);} 
+            40% {-webkit-transform: translateY(-7px);} 
+            60% {-webkit-transform: translateY(-2px);} 
+        } 
+
+        @keyframes bounce { 
+            0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
+            40% {transform: translateY(-7px);} 
+            60% {transform: translateY(-2px);} 
+        } 
+
+        .bounce { 
+            -webkit-animation-name: bounce; 
+            animation-name: bounce; 
+        }
 
 .circle.small {
     display: inline-block;
