--- a/sass/regions/_kontakt.scss
+++ b/sass/regions/_kontakt.scss
@@ -62,6 +62,9 @@
                 z-index: 1;
                 opacity: 0;
                 
+                .ie8 & {
+                    display: none;
+                }
                 &.active {
                     opacity: 1;
                 }
