--- a/sass/regions/_start.scss
+++ b/sass/regions/_start.scss
@@ -52,6 +52,32 @@
         }
     }
     
+    .animated { 
+            -webkit-animation-duration: 2.5s; 
+            animation-duration: 2.5s; 
+            -webkit-animation-fill-mode: both; 
+            animation-fill-mode: both; 
+            animation-iteration-count:infinite; 
+            -webkit-animation-iteration-count:infinite; 
+        } 
+        
+        @-webkit-keyframes bounce { 
+            0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);} 
+            40% {-webkit-transform: translateY(-30px);} 
+            60% {-webkit-transform: translateY(-15px);} 
+        } 
+
+        @keyframes bounce { 
+            0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
+            40% {transform: translateY(-30px);} 
+            60% {transform: translateY(-15px);} 
+        } 
+
+        .bounce { 
+            -webkit-animation-name: bounce; 
+            animation-name: bounce; 
+        }
+    
     .scroll-down {
         width: 150px;
         text-align: center;
@@ -61,6 +87,8 @@
         bottom: 20px;
         left: 50%;
         margin-left: -75px;
+         
+         
          
         .text {
            display: inline-block;
